this commit fix register user

--- a/src/app/views/layout/sidebar/sidebar.component.html
+++ b/src/app/views/layout/sidebar/sidebar.component.html
@@ -58,93 +58,13 @@
             <a class="nav-link" data-toggle="collapse" href="#encomendas" aria-expanded="false"
                 aria-controls="encomendas">
                 <i class="menu-icon typcn typcn-coffee"></i>
-                <span class="menu-title">{{ 'SIDEBAR.ORDERS.title' | translate }}</span>
+                <span class="menu-title">Processos Jurídicos</span>
                 <i class="menu-arrow"></i>
             </a>
             <div class="collapse" id="encomendas">
                 <ul class="nav flex-column sub-menu">
-                  <!--<li class="nav-item">
-                    <a class="nav-link"  routerLink="/encomendas/registar-encomenda" routerLinkActive>Registar Encomenda</a>
-                  </li>-->
                     <li class="nav-item">
                         <a class="nav-link" routerLink="/encomendas/listar-encomendas" routerLinkActive>{{ 'SIDEBAR.ORDERS.listing' | translate }}</a>
-                    </li>
-                </ul>
-            </div>
-        </li>
-
-        <!--<li class="nav-item">
-            <a class="nav-link" data-toggle="collapse" href="#facturas" aria-expanded="false"
-                aria-controls="facturas">
-                <i class="menu-icon typcn typcn-coffee"></i>
-                <span class="menu-title">Facturação</span>
-                <i class="menu-arrow"></i>
-            </a>
-            <div class="collapse" id="facturas">
-                <ul class="nav flex-column sub-menu">
-                  <li class="nav-item">
-                    <a class="nav-link"  routerLink="/facturacaos/registar-factura" routerLinkActive>Registar Factura</a>
-                  </li>
-                    <li class="nav-item">
-                        <a class="nav-link" routerLink="/facturacaos/listar-facturas" routerLinkActive>Listar Facturas</a>
-                    </li>
-                </ul>
-            </div>
-        </li>-->
-
-        <li class="nav-item">
-            <a class="nav-link" data-toggle="collapse" href="#relatorios" aria-expanded="false"
-                aria-controls="relatorios">
-                <i class="menu-icon typcn typcn-coffee"></i>
-                <span class="menu-title">Relatórios</span>
-                <i class="menu-arrow"></i>
-            </a>
-            <div class="collapse" id="relatorios">
-                <ul class="nav flex-column sub-menu">
-                    <li class="nav-item">
-                        <a class="nav-link" routerLink="/relatorios/reporting_bi" routerLinkActive>Reporting & BI</a>
-                    </li>
-                </ul>
-            </div>
-        </li>
-        
-        <li class="nav-item">
-            <a class="nav-link" data-toggle="collapse" href="#operacoes" aria-expanded="false"
-                aria-controls="operacoes">
-                <i class="menu-icon typcn typcn-document-add"></i>
-                <span class="menu-title">{{ 'SIDEBAR.OPERATIONS.title' | translate }}</span>
-                <i class="menu-arrow"></i>
-            </a>
-            <div class="collapse" id="operacoes">
-                <ul class="nav flex-column sub-menu">
-                    <li class="nav-item">
-                        <a class="nav-link" routerLink="/operacoes/noticias" routerLinkActive> {{ 'SIDEBAR.OPERATIONS.news' | translate }} </a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" routerLink="/operacoes/banners-loja" routerLinkActive> Banners Loja </a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" routerLink="/operacoes/mensagens/faleConnosco" routerLinkActive> Listagem de fale connosco </a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" data-toggle="collapse" href="#productos_parceiros" aria-expanded="false" aria-controls="productos_parceiros">
-                            <i class="menu-icon typcn typcn-document-add"></i>
-                            <span class="menu-title">Produtos e Parceiros</span>
-                            <i class="menu-arrow"></i>
-                        </a>
-                        <div class="collapse" id="productos_parceiros">
-                            <ul class="nav flex-column sub-menu">
-                                <li class="nav-item">
-                                    <a class="nav-link" routerLink="/operacoes/productos/stock_baixo" routerLinkActive>Produtos Stock Baixo</a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link" routerLink="/operacoes/productos/of_partners" routerLinkActive>Produtos de Parceiros</a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link" routerLink="/operacoes/productos/movimento_comissao" routerLinkActive>Movimento Produto Comissão</a>
-                                </li>
-                            </ul>
-                        </div>
                     </li>
                 </ul>
             </div>
