--- a/src/app/views/login/login.component.html
+++ b/src/app/views/login/login.component.html
@@ -6,7 +6,7 @@
                   <div class="auto-form-wrapper">
                       <form action="#">
                         <div class="form-group text-center">
-                            <img class="logotipo" src="./../../../assets/images/company/logos/ajca.png" style="height:40px;width: 40px;">
+                            <!--<img class="logotipo" src="./../../../assets/images/company/logos/ajca.png" style="height:40px;width: 40px;">-->
                         </div>
                           <div class="form-group">
                               <label class="label">Usuário</label>
