this commit init create process

--- a/src/app/views/layout/sidebar/sidebar.component.html
+++ b/src/app/views/layout/sidebar/sidebar.component.html
@@ -55,16 +55,16 @@
             </div>
         </li>
         <li class="nav-item">
-            <a class="nav-link" data-toggle="collapse" href="#encomendas" aria-expanded="false"
-                aria-controls="encomendas">
+            <a class="nav-link" data-toggle="collapse" href="#processos_juridicos" aria-expanded="false"
+                aria-controls="processos_juridicos">
                 <i class="menu-icon typcn typcn-coffee"></i>
                 <span class="menu-title">Processos Jurídicos</span>
                 <i class="menu-arrow"></i>
             </a>
-            <div class="collapse" id="encomendas">
+            <div class="collapse" id="processos_juridicos">
                 <ul class="nav flex-column sub-menu">
                     <li class="nav-item">
-                        <a class="nav-link" routerLink="/encomendas/listar-encomendas" routerLinkActive>{{ 'SIDEBAR.ORDERS.listing' | translate }}</a>
+                        <a class="nav-link" routerLink="/processos_juridicos/listagem_processos" routerLinkActive>{{ 'SIDEBAR.ORDERS.listing' | translate }}</a>
                     </li>
                 </ul>
             </div>
