--- a/src/app/views/home/home.component.html
+++ b/src/app/views/home/home.component.html
@@ -45,7 +45,7 @@
                     <div class="d-flex">
                       <div class="wrapper">
                         <h3 class="mb-0 font-weight-semibold">{{ dashbaord.products_count }}</h3>
-                        <h5 class="mb-0 font-weight-medium text-primary">Total de Produtos</h5>
+                        <h5 class="mb-0 font-weight-medium text-primary">Total de Processos</h5>
                         <!--<p class="mb-0 text-muted">+57.62(+0.76%)</p>-->
                       </div>
                       <div class="wrapper my-auto ml-auto ml-lg-4">
