--- a/src/app/views/processos-juridicos/create-or-edit-processos/create-or-edit-processos.component.html
+++ b/src/app/views/processos-juridicos/create-or-edit-processos/create-or-edit-processos.component.html
@@ -11,72 +11,80 @@
                     <div class="row">
                         <div class="col-md-6">
                             <div class="form-group">
-                                <label class="control-label"><i class="fa fa-edit"></i> Nome</label>
-                                <input type="text" formControlName="name" name="name" class="form-control" placeholder="Nome" 
-                                [ngClass]="{ 'is-invalid': submitted && f.name.errors, 'is-valid': f.name.touched && !f.name.errors }" />
-                                <div *ngIf="submitted && f['name'].errors" class="invalid-feedback">
-                                    <div *ngIf="f['name'].errors.required">O campo nome é obrigatório</div>
+                                <label class="control-label"><i class="fa fa-edit"></i> Selecione Cliente</label>
+                                <div class="input-group">
+                                  <input type="text" placeholder="Pesquisar Cliente" formControlName="search_cliente"
+                                    class="form-control" (keyup)="searchCliente()">
+                                  <span class="input-group-btn">
+                                    <!--<button type="button" class="btn btn-default btn-flat"
+                                        style="background-color: transparent;"><i class="fa fa-search"></i></button>-->
+                                  </span>
                                 </div>
-                            </div>
+          
+                                <div *ngIf="view_cliente" class="autocomplete-container">
+                                  <ul>
+                                    <li *ngFor="let item of clientes">
+                                      <a href="javascript:void(0)" (click)="setCliente(item)">{{ item.name }}</a>
+                                    </li>
+                                  </ul>
+                                </div>
+          
+                              </div>
                         </div>
                         <div class="col-md-6">
                             <div class="form-group">
-                                <label class="control-label"><i class="fa fa-edit"></i> Valor</label>
+                                <label class="control-label"><i class="fa fa-edit"></i> Data Inicio</label>
                                 <input
-                                    type="number"
-                                    formControlName="value"
-                                    name="value"
+                                    type="date"
+                                    formControlName="date_start"
+                                    name="date_start"
                                     min="1"
                                     class="form-control"
-                                    placeholder="Valor"
-                                    [ngClass]="{ 'is-invalid': submitted && f.value.errors, 'is-valid': f.value.touched && !f.value.errors }"
+                                    placeholder="date_start"
+                                    [ngClass]="{ 'is-invalid': submitted && f.date_start.errors, 'is-valid': f.date_start.touched && !f.date_start.errors }"
                                 />
-                                <div *ngIf="submitted && f['value'].errors" class="invalid-feedback">
-                                    <div *ngIf="f['value'].errors.required">O campo valor é obrigatório</div>
+                                <div *ngIf="submitted && f['date_start'].errors" class="invalid-feedback">
+                                    <div *ngIf="f['date_start'].errors.required">O campo date_start é obrigatório</div>
                                 </div>
                             </div>
                         </div>
                         <div class="col-md-6">
                             <div class="form-group">
-                                <label class="control-label"><i class="fa fa-edit"></i> Quantidade</label>
+                                <label class="control-label"><i class="fa fa-edit"></i> Data Fim</label>
                                 <input
-                                    type="number"
-                                    formControlName="quantity"
-                                    name="quantity"
+                                    type="date"
+                                    formControlName="date_end"
+                                    name="date_end"
                                     min="1"
                                     class="form-control"
                                     placeholder="Quantidade"
-                                    [ngClass]="{ 'is-invalid': submitted && f.quantity.errors, 'is-valid': f.quantity.touched && !f.quantity.errors }"
+                                    [ngClass]="{ 'is-invalid': submitted && f.date_end.errors, 'is-valid': f.date_end.touched && !f.date_end.errors }"
                                 />
-                                <div *ngIf="submitted && f['quantity'].errors" class="invalid-feedback">
-                                    <div *ngIf="f['quantity'].errors.required">O campo quantidade é obrigatório</div>
+                                <div *ngIf="submitted && f['date_end'].errors" class="invalid-feedback">
+                                    <div *ngIf="f['date_end'].errors.required">O campo date_end é obrigatório</div>
                                 </div>
                             </div>
                         </div>
                         <div class="col-md-6">
                             <div class="form-group">
-                                <label class="control-label"><i class="fa fa-edit"></i>Imagem</label>
-                                <input (change)="uploadFile($event)" accept="image/jpeg,image/gif,image/png,application/pdf,image/x-eps" type="file" name="image" class="form-control"
-                                    placeholder="Imagem"
-                                    [ngClass]="{ 'is-invalid': submitted && f.image.errors, 'is-valid': f.image.touched && !f.image.errors }" />
-                                <div *ngIf="submitted && f['image'].errors" class="invalid-feedback">
-                                    <div *ngIf="f['image'].errors.required"> O campo Imagem é obrigatório</div>
+                                <label class="control-label"><i class="fa fa-edit"></i> Estado</label>
+                                <select class="form-control" 
+                                formControlName="status"
+                                 [ngClass]="{ 'is-invalid': submitted && f.status.errors, 'is-valid': f.status.touched && !f.status.errors }">
+                                    <option value="1">Activo</option>
+                                    <option value="0">Inactivo</option>
+                                </select>
+                                <div *ngIf="submitted && f['status'].errors" class="invalid-feedback">
+                                    <div *ngIf="f['status'].errors.required">O campo estado é obrigatório</div>
                                 </div>
-                                <!--<img *ngIf="image_preview" style="width:100%;height: 300px;" [src]="image_preview">-->
                             </div>
                         </div>
-                        <!--<div class="col-md-12">
+                        <div class="col-md-12">
                             <div class="form-group">
                                 <label class="control-label"><i class="fa fa-edit"></i> Descrição</label>
-                                <textarea
-                                    type="text"
-                                    formControlName="descricao"
-                                    name="descricao"
-                                    class="form-control"
-                                    placeholder="Nome">
-                                </textarea>                               
+                            <textarea  formControlName="description"  placeholder="description" class="form-control"></textarea>                             
                             </div>
-                        </div>-->
+                        </div>
                     </div>
                 </div>
 
