--- a/src/app/views/processos-juridicos/associar-documentos/associar-documentos.component.html
+++ b/src/app/views/processos-juridicos/associar-documentos/associar-documentos.component.html
@@ -1,1 +1,36 @@
-<p>associar-documentos works!</p>
+<div class="modal modal-info fade in" data-backdrop="static" id="{{modal}}">
+    <div class="modal-dialog modal-lg" style="max-width: 800px;">
+        <div class="modal-content">
+            <form [formGroup]="associarDocumentoForm" (submit)="associarDocumento();" enctype="multipart/form-data">
+                <div class="modal-header">
+                    <h5 class="modal-title"><i class="fa fa-archive" aria-hidden="true"></i> {{title}}</h5>
+                    <button id="close" type="button" class="close" data-dismiss="modal">&times;</button>
+                </div>
+                <div class="modal-body">
+                    <ngx-loading [show]="loading"></ngx-loading>
+                    <div class="row">          
+            
+                        <div class="col-md-12">
+                            <div class="form-group">
+                                <label class="control-label"><i class="fa fa-edit"></i>Ficheiro</label>
+                                <input (change)="uploadFile($event)" accept="file_name/jpeg,file_name/gif,file_name/png,application/pdf,file_name/x-eps" type="file" name="file_name" class="form-control"
+                                    placeholder="file_name"
+                                    [ngClass]="{ 'is-invalid': submitted && f.file_name.errors, 'is-valid': f.file_name.touched && !f.file_name.errors }" />
+                                <!--<div *ngIf="submitted && f['file_name'].errors" class="invalid-feedback">
+                                    <div *ngIf="f['file_name'].errors.required"> O campo file_namem é obrigatório</div>
+                                </div>-->
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Modal footer -->
+                <div class="modal-footer">
+                    <button class="btn btn-danger btn-sm" type="reset" [disabled]="associarDocumentoForm.pristine && !submitted" (click)="onReset()">Limpar</button>
+                    <button class="btn btn-success btn-sm mr-1" type="submit" [disabled]="associarDocumentoForm.valid">Validar</button>
+                    <button type="submit" class="btn btn-primary btn-sm">Salvar</button>
+                </div>
+            </form>
+        </div>
+    </div>
+</div>
