--- a/src/app/views/processos-juridicos/processos-juridicos.component.html
+++ b/src/app/views/processos-juridicos/processos-juridicos.component.html
@@ -90,11 +90,10 @@
                                                 <td>{{ item.created_at | date: 'dd-MM-yyyy'}}</td>
                                                 <td>
                                                     <div class="dropdown ml-lg-auto ml-3 toolbar-item">
-                                                        <button class="btn btn-primary dropdown-toggle">Operações</button>
+                                                        <button class="btn btn-danger dropdown-toggle">Operações</button>
                                                         <ul class="dropdown-menu">
-                                                          <li class="dropdown-item" href="javascript:void(0)" (click)="setProduct(item)" data-toggle="modal" data-target="#createOrEditProcessoModal">Editar</li>
-                                                          <li class="dropdown-item" href="javascript:void(0)" (click)="setProduct(item)" data-toggle="modal" data-target="#increaseStockModal">Aumentar Stock</li>
-                                                          <li class="dropdown-item" href="javascript:void(0)" (click)="setProduct(item)" data-toggle="modal" data-target="#shareProuctFacebookModal">Partilhar no facebook</li>
+                                                          <li class="dropdown-item" href="javascript:void(0)" (click)="setProcesso(item)" data-toggle="modal" data-target="#createOrEditProcessoModal">Editar</li>
+                                                          <li class="dropdown-item" href="javascript:void(0)" (click)="setProcesso(item)" data-toggle="modal" data-target="#associarDocumentoModal">Associar Documento</li>
                                                         </ul>
                                                       </div>
                                                 </td>
@@ -124,6 +123,7 @@
             <!-- partial:../../partials/_footer.html -->
             <app-footer></app-footer>
             <createOrEditProcesso [processo]="processo" [modal]=""></createOrEditProcesso>
+            <associarDocumento [processo]="processo" [modal]=""></associarDocumento>
             <!-- partial -->
         </div>
         <!-- main-panel ends -->
