this commit init list processos_documentos

--- a/src/app/views/processos-juridicos/processos-juridicos.component.html
+++ b/src/app/views/processos-juridicos/processos-juridicos.component.html
@@ -125,7 +125,7 @@
             <app-footer></app-footer>
             <createOrEditProcesso [processo]="processo" [modal]=""></createOrEditProcesso>
             <associarDocumento [processo]="processo" [modal]=""></associarDocumento>
-            <verDocumentoProcesso [modal]=""></verDocumentoProcesso>
+            <verDocumentoProcesso [processo]="processo" [modal]=""></verDocumentoProcesso>
             <!-- partial -->
         </div>
         <!-- main-panel ends -->
