--- a/src/app/views/processos-juridicos/ver-documento-processo/ver-documento-processo.component.html
+++ b/src/app/views/processos-juridicos/ver-documento-processo/ver-documento-processo.component.html
@@ -9,7 +9,7 @@
                 <table *ngIf="processo" class="table table-hover table-striped">
                     <tbody>
                         <tr>
-                            <th>Nº Encomenda:</th>
+                            <th>Nº Processo:</th>
                             <td>{{processo.codigo}}</td>
                         </tr>
                         <tr>
