--- a/src/app/views/home/home.component.html
+++ b/src/app/views/home/home.component.html
@@ -17,7 +17,7 @@
               <div class="card-body">
                 <div class="row">
                   <ngx-loading [show]="loading"></ngx-loading>
-                  <div class="col-lg-3 col-md-6">
+                  <div class="col-lg-4 col-md-6">
                     <div class="d-flex">
                       <div class="wrapper">
                         <h3 class="mb-0 font-weight-semibold">{{ dashbaord.customer_count }}</h3>
@@ -29,7 +29,7 @@
                       </div>
                     </div>
                   </div>
-                  <div class="col-lg-3 col-md-6 mt-md-0 mt-4">
+                  <div class="col-lg-4 col-md-6 mt-md-0 mt-4">
                     <div class="d-flex">
                       <div class="wrapper">
                         <h3 class="mb-0 font-weight-semibold">{{ dashbaord.users_count }}</h3>
@@ -41,27 +41,15 @@
                       </div>
                     </div>
                   </div>
-                  <div class="col-lg-3 col-md-6 mt-md-0 mt-4">
+                  <div class="col-lg-4 col-md-6 mt-md-0 mt-4">
                     <div class="d-flex">
                       <div class="wrapper">
-                        <h3 class="mb-0 font-weight-semibold">{{ dashbaord.products_count }}</h3>
+                        <h3 class="mb-0 font-weight-semibold">{{ dashbaord.legal_processes_count }}</h3>
                         <h5 class="mb-0 font-weight-medium text-primary">Total de Processos</h5>
                         <!--<p class="mb-0 text-muted">+57.62(+0.76%)</p>-->
                       </div>
                       <div class="wrapper my-auto ml-auto ml-lg-4">
                         <canvas height="50" width="100" id="stats-line-graph-3"></canvas>
-                      </div>
-                    </div>
-                  </div>
-                  <div class="col-lg-3 col-md-6 mt-md-0 mt-4">
-                    <div class="d-flex">
-                      <div class="wrapper">
-                        <h3 class="mb-0 font-weight-semibold">{{ configService.numberFormat(dashbaord.total_today) }} <span style="font-size:12px">KZ</span></h3>
-                        <h5 class="mb-0 font-weight-medium text-primary">Total Hoje</h5>
-                        <!--<p class="mb-0 text-muted">+138.97(+0.54%)</p>-->
-                      </div>
-                      <div class="wrapper my-auto ml-auto ml-lg-4">
-                        <canvas height="50" width="100" id="stats-line-graph-4"></canvas>
                       </div>
                     </div>
                   </div>
