--- a/src/app/views/layout/sidebar/sidebar.component.html
+++ b/src/app/views/layout/sidebar/sidebar.component.html
@@ -45,7 +45,12 @@
             >
           </li>
           <li class="nav-item">
-            <a class="nav-link" routerLink="/viagens">Viagens</a>
+            <a
+              class="nav-link"
+              routerLink="/transportes/viagens"
+              routerLinkActive="active"
+              >Viagens</a
+            >
           </li>
           <li class="nav-item">
             <a class="nav-link" routerLink="/lugares">Lugares</a>
